Revision history for Perl extension Chess-Plisco

{{$NEXT}}
	- stringification is no longer overloaded

v0.8.0  2025-11-16
	- pondering implemented in engine
	- improved time management
	- fixed printing of prinicipal variation
	- principal variation no longer printed in quiescence search
	- parseMove() now throws exceptions
	- parseMove() now does a complete legality check (and throws ...)
	- constructor does now a complete legality/consistency check on position

v0.7.0  2025-11-11
	- probing of Syzygy endgame tablebase implemented (not yet used in engine)
	- documentation for helper modules added
	- check for insufficient material fixed
	- game over check implemented
	- smaller bugs in chess logic fixed
	- the library now uses MAJOR.MINOR.PATCHLEVEL versioning

0.6  2025-11-04
	- invalid Syzygy references removed
	- the Syzygy code is work in progress and not yet functional

0.5  2025-11-03
	- the move parser is now case-sensitive (breaking change!)
	- fixed bugs in SAN construction
	- fixed bugs in SAN parser
	- should now work under MS-DOS
	- aspiration windows

0.4  2021-10-12
	- Faster engine start-up because macros are expanded for release
	- EPD parser
	- check for insufficient material
	- detect draw by repetition
	- detect draw by 50-moves-rule
	- enhanced move ordering
	- better performance
	- macros in releases are now expanded for faster startup time
	- new option "Batch" for sequential processing
	- new command "fen"
	- new command "evaluate"
	- new command "see MOVE"
	- use PeSTO evaluation function

0.2  2021-09-21
	- fixed exception in quiescence search
	- implement the UCI stop command
	- fixed half-move clock reset after castling state change
	- fixed time forfeit, when playing as white

0.1  2021-09-19
	- initial version