@@ -2,6 +2,8 @@ Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
 	- stringification is no longer overloaded
+	- changed spelling from half_move/HALF_MOVE/halfMove to
+	  halfmove/HALFMOVE/halfmove everyhwere
 
 v0.8.0  2025-11-16
 	- pondering implemented in engine
